# ckanext-spatial

./: .gitignore  .gitmodules  .hgignore  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  README.rst  conftest.py  dev-requirements.txt  doc-requirements.txt  mkdocs.yml  pip-requirements.txt  pip3-requirements.txt  pyproject.toml  requirements-postgis-py2.txt  requirements-postgis.txt  requirements-py2.txt  requirements.txt  setup.cfg  setup.py  test-core.ini  test-github-actions.ini  test-postgis.ini  test.ini
.github/workflows/: ci.yml  test-postgis.yml  test.yml
.tx/: config
ckanext/spatial/: __init__.py  cli.py  geoalchemy_common.py  harvested_metadata.py  harvested_metadata_fgdc.py  harvesters.py  helpers.py  html.py  interfaces.py  logic.py  model.py  nongeos_plugin.py  plugin.py  plugin_harvest_metadata_api.py  util.py  views.py
ckanext/spatial/assets/: webassets.yml
ckanext/spatial/commands/: csw.py  cswinfo.py  extents.py  spatial.py  validation.py
ckanext/spatial/controllers/: api.py  csw.py  service_proxy.py  view.py
ckanext/spatial/harvesters/: __init__.py  base.py  csw.py  csw_fgdc.py  doc.py  fs.py  gemini.py  geonetwork.py  waf.py  waf_cioos.py  waf_datastream.py
ckanext/spatial/lib/: __init__.py  coupled_resource.py  csw_client.py  helpers.py  report.py  reports.py
ckanext/spatial/model/: __init__.py  harvested_metadata.py  harvested_metadata_fgdc.py  (+2 more)
doc/: adr-tags.rst  conf.py  csw.md  csw.rst  dataset-map.rst  harvesters.md  harvesters.rst  index.ckan  index.md  index.rst  install.md  install.rst  map-widgets.md  map-widgets.rst  postgis-manual.rst  previews.md  previews.rst  spatial-search.md  spatial-search.rst
doc/_templates/: footer.html
i18n/: ckanext-spatial.pot
(+773 files in other folders)
